<resources>
    <string name="app_name">CountriesApplication</string>

    <string name="population_">Population:</string>
    <string name="region_">Region:</string>
    <string name="capital_">Capital:</string>
    <string name="motto_">Motto:</string>
    <string name="official_language_">Official language:</string>
    <string name="ethnic_group_">Ethnic group:</string>
    <string name="government_">Government:</string>
    <string name="independence_">Independence:</string>
    <string name="currency_">Currency:</string>
    <string name="driving_side_">Driving side:</string>
    <string name="dialing_code_">Dialing Code:</string>
    <string name="date_format_">Date format:</string>
    <string name="time_zone_">Time zone:</string>
    <string name="gdp_">GDP:</string>
    <string name="area_">Area:</string>
    <string name="religion_">Religion:</string>
    <string name="explore">Explore</string>
    <string name="search_country">Search Country</string>
    <string name="languages">Languages</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="show_results">Show results</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="o">O</string>
    <string name="q">Q</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="w">W</string>
    <string name="v">V</string>
    <string name="u">U</string>
    <string name="t">T</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="p">P</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="k">K</string>
    <string name="j">J</string>
    <string name="i">I</string>
    <string name="h">H</string>
    <string name="g">G</string>
    <string name="d">D</string>
    <string name="bh">BH</string>
    <string name="du">DU</string>
    <string name="en">EN</string>
    <string name="es">ES</string>
    <string name="fr">FR</string>
    <string name="it">IT</string>
    <string name="pg">PG</string>
    <string name="ru">RU</string>
    <string name="sw">SW</string>
    <string name="tr">Tr</string>
    <string name="ch">CH</string>
    <string name="ar">AR</string>
    <string name="be">BN</string>
    <string name="landlocked_">Landlocked:</string>
    <string name="un_member_">UN Member:</string>
    <string name="start_of_week_">Start of week:</string>
    <string name="bahasa">Bahasa</string>
    <string name="deutsch">Deutsch</string>
    <string name="english">English</string>
    <string name="espa_ol">Español</string>
    <string name="fran_aise">Française</string>
    <string name="italiano">Italiano</string>
    <string name="portugu_s">Português</string>
    <string name="russian">Pу́сский</string>
    <string name="svenska">Svenska</string>
    <string name="t_rk_e">Türkçe</string>
    <string name="chinese">普通话</string>
    <string name="arabic">بالعربية</string>
    <string name="bengali">বাঙ্গালী</string>
</resources>