<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CountriesFragment"
    android:paddingHorizontal="24dp">

    <TextView
        android:id="@+id/explore_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/explore"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <CheckBox
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:button="@null"
        android:background="@drawable/app_mode_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/explore_text_view"
        app:layout_constraintBottom_toBottomOf="@+id/explore_text_view"/>


    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:queryHint="@string/search_country"
        app:hintTextAppearance="@style/HintText"
        android:background="@drawable/curved_rectangle_bg"
        app:layout_constraintTop_toBottomOf="@id/explore_text_view"
        app:layout_constraintStart_toStartOf="@id/explore_text_view"/>


    <TextView
        android:id="@+id/search_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_country"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/search_view"
        app:layout_constraintBottom_toBottomOf="@id/search_view"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintEnd_toEndOf="@id/search_view"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/language_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintStart_toStartOf="@id/search_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="EN"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/ic_language"
            android:drawablePadding="10dp"/>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintEnd_toEndOf="@id/search_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/ic_filter"
            android:drawablePadding="10dp"/>


    </androidx.cardview.widget.CardView>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/curved_rectangle_bg"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="130dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>